--- a/index.html
+++ b/index.html
@@ -1,12 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biten,Biten deloper</title>
-</head>
-<body>
-    
-</body>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- Home-section-start -->
+    <section class="home">
+      <header>
+        <div class="container">
+          <nav class="navigation">
+            <div class="logo"></div>
+            <ul class="nav_menu">
+              <li class="nav_list">
+                <a href="#!" class="nav_link">Home</a>
+              </li>
+              <li class="nav_list">
+                <a href="#!" class="nav_link">About</a>
+              </li>
+              <li class="nav_list">
+                <a href="#!" class="nav_link">Project</a>
+              </li>
+              <li class="nav_list">
+                <a href="#!" class="nav_link">Gallery</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <div class="hero-contant container d-grid">
+        <div class="hero-left">
+          <img src="" alt="" />
+        </div>
+        <div class="hero-right">
+          <h2 class="subheading">Hello, I’m Biten</h2>
+          <h1 class="heading">Expert in Web Design & Development</h1>
+          <p class="paragraph">
+            Currently available for select projects, collaborations and
+            consulting.Currently available for select projects, collaborations
+            and consulting.
+          </p>
+          <a href="#!" class="btn-primary">SEE MY WORK</a>
+        </div>
+      </div>
+    </section>
+    <!-- Home-section-end -->
+    <!-- Service-section-start -->
+    <section class="service">
+      <div class="container">
+        <h1 class="heading">Service</h1>
+      </div>
+      <div class="container">
+          <div class="service-item">
+            <i class="fa fa-laptop service-icon"></i>
+            <h3 class="service-heading">WEB DESIGN</h3>
+            <p class="paragraph">
+                consectetur adipisicing elit. Tenetur labore nesciunt alias iste provident accusamus sint? Ea excepturi numquam corporis iure repellat cumque, animi voluptas architecto eveniet neque nihil vitae
+            </p>
+          </div>
+          <div class="service-item">
+            <i class="fab fa-php service-icon"></i>
+            <h3 class="service-heading">WEB DEVELOPMENT</h3>
+            <p class="paragraph">
+                consectetur adipisicing elit. Tenetur labore nesciunt alias iste provident accusamus sint? Ea excepturi numquam corporis iure repellat cumque, animi voluptas architecto eveniet neque nihil vitae
+            </p>
+          </div>
+          <div class="service-item">
+            <i class="fab fa-figma service-icon"></i>
+            <h3 class="service-heading">UX|UI</h3>
+            <p class="paragraph">
+                consectetur adipisicing elit. Tenetur labore nesciunt alias iste provident accusamus sint? Ea excepturi numquam corporis iure repellat cumque, animi voluptas architecto eveniet neque nihil vitae
+            </p>
+          </div>
+          <div class="service-item">
+            <i class="fas fa-video service-icon"></i>
+            <h3 class="service-heading">Video Editing</h3>
+            <p class="paragraph">
+                consectetur adipisicing elit. Tenetur labore nesciunt alias iste provident accusamus sint? Ea excepturi numquam corporis iure repellat cumque, animi voluptas architecto eveniet neque nihil vitae
+            </p>
+          </div>
+      </div>
+    </section>
+    <!-- Service-section-end -->
+    <script src="js/script.js"></script>
+  </body>
 </html>
