--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     <section class="home">
       <header>
         <div class="container">
-          <nav class="navigation">
-            <div class="logo"></div>
+          <nav class="navigation d-flex jsc-sb align-center">
+            <div class="logo">Biten</div>
+            <div class="menu_icon">
+              <div class="memu_ionc_box">
+                <div class="icon-line"></div>
+              </div>
+            </div>
             <ul class="nav_menu">
               <li class="nav_list">
                 <a href="#!" class="nav_link">Home</a>
@@ -31,11 +36,12 @@
               <li class="nav_list">
                 <a href="#!" class="nav_link">Gallery</a>
               </li>
+              <a href="#!" class="btn-primary">Hire Me</a>
             </ul>
           </nav>
         </div>
       </header>
-      <div class="hero-contant container d-grid">
+      <div class="hero-contant container d-grid align-center">
         <div class="hero-left">
           <img src="" alt="" />
         </div>
@@ -54,38 +60,46 @@
     <!-- Home-section-end -->
     <!-- Service-section-start -->
     <section class="service">
-      <div class="container">
+      <div class="container text-center">
         <h1 class="heading">Service</h1>
       </div>
-      <div class="container">
-          <div class="service-item">
-            <i class="fa fa-laptop service-icon"></i>
-            <h3 class="service-heading">WEB DESIGN</h3>
-            <p class="paragraph">
-                consectetur adipisicing elit. Tenetur labore nesciunt alias iste provident accusamus sint? Ea excepturi numquam corporis iure repellat cumque, animi voluptas architecto eveniet neque nihil vitae
-            </p>
-          </div>
-          <div class="service-item">
-            <i class="fab fa-php service-icon"></i>
-            <h3 class="service-heading">WEB DEVELOPMENT</h3>
-            <p class="paragraph">
-                consectetur adipisicing elit. Tenetur labore nesciunt alias iste provident accusamus sint? Ea excepturi numquam corporis iure repellat cumque, animi voluptas architecto eveniet neque nihil vitae
-            </p>
-          </div>
-          <div class="service-item">
-            <i class="fab fa-figma service-icon"></i>
-            <h3 class="service-heading">UX|UI</h3>
-            <p class="paragraph">
-                consectetur adipisicing elit. Tenetur labore nesciunt alias iste provident accusamus sint? Ea excepturi numquam corporis iure repellat cumque, animi voluptas architecto eveniet neque nihil vitae
-            </p>
-          </div>
-          <div class="service-item">
-            <i class="fas fa-video service-icon"></i>
-            <h3 class="service-heading">Video Editing</h3>
-            <p class="paragraph">
-                consectetur adipisicing elit. Tenetur labore nesciunt alias iste provident accusamus sint? Ea excepturi numquam corporis iure repellat cumque, animi voluptas architecto eveniet neque nihil vitae
-            </p>
-          </div>
+      <div class="container d-grid service-items">
+        <div class="service-item">
+          <i class="fa fa-laptop service-icon"></i>
+          <h3 class="service-heading">WEB DESIGN</h3>
+          <p class="paragraph">
+            consectetur adipisicing elit. Tenetur labore nesciunt alias iste
+            provident accusamus sint? Ea excepturi numquam corporis iure
+            repellat cumque, animi voluptas architecto eveniet neque nihil vitae
+          </p>
+        </div>
+        <div class="service-item">
+          <i class="fab fa-php service-icon"></i>
+          <h3 class="service-heading">WEB DEVELOPMENT</h3>
+          <p class="paragraph">
+            consectetur adipisicing elit. Tenetur labore nesciunt alias iste
+            provident accusamus sint? Ea excepturi numquam corporis iure
+            repellat cumque, animi voluptas architecto eveniet neque nihil vitae
+          </p>
+        </div>
+        <div class="service-item">
+          <i class="fab fa-figma service-icon"></i>
+          <h3 class="service-heading">UX|UI</h3>
+          <p class="paragraph">
+            consectetur adipisicing elit. Tenetur labore nesciunt alias iste
+            provident accusamus sint? Ea excepturi numquam corporis iure
+            repellat cumque, animi voluptas architecto eveniet neque nihil vitae
+          </p>
+        </div>
+        <div class="service-item">
+          <i class="fas fa-video service-icon"></i>
+          <h3 class="service-heading">Video Editing</h3>
+          <p class="paragraph">
+            consectetur adipisicing elit. Tenetur labore nesciunt alias iste
+            provident accusamus sint? Ea excepturi numquam corporis iure
+            repellat cumque, animi voluptas architecto eveniet neque nihil vitae
+          </p>
+        </div>
       </div>
     </section>
     <!-- Service-section-end -->
