--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <nav class="navigation d-flex jsc-sb align-center">
             <div class="logo">Biten</div>
             <div class="menu_icon">
-              <div class="memu_ionc_box">
+              <div class="menu_icon_box">
                 <div class="icon-line"></div>
               </div>
             </div>
@@ -36,7 +36,9 @@
               <li class="nav_list">
                 <a href="#!" class="nav_link">Gallery</a>
               </li>
-              <a href="#!" class="btn-primary">Hire Me</a>
+              <li class="nav_list">
+                <a href="#!" class="btn-primary">Hire Me</a>
+              </li>
             </ul>
           </nav>
         </div>
