--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
       </div>
     </section>
     <!-- Service-section-end -->
+    <section class="skill">
+      <div class="container text-center">
+        <h1 class="heading">Skill</h1>
+      </div>
+    </section>
     <script src="js/script.js"></script>
   </body>
 </html>
