--- a/index.html
+++ b/index.html
@@ -109,6 +109,36 @@
       <div class="container text-center">
         <h1 class="heading">Skill</h1>
       </div>
+      <div class="skill-container container d-grid">
+        <div class="skill-img"></div>
+        <div class="skill-items">
+          <div class="skill-item">
+            <div class="skill-progress-bar">
+              <b class="skill-headding">Html5</b>
+              <div class="progress">
+                <div class="progress-inner" data-progress="100%"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="skill-item">
+            <div class="skill-progress-bar">
+              <b class="skill-headding">Css3</b>
+              <div class="progress">
+                <div class="progress-inner" data-progress="90%"></div>
+              </div>
+            </div>
+          </div>
+          <div class="skill-item">
+            <div class="skill-progress-bar">
+              <b class="skill-headding">Javascript</b>
+              <div class="progress">
+                <div class="progress-inner" data-progress="80%"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="js/script.js"></script>
   </body>
