--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
         <h1 class="heading">Skill</h1>
       </div>
       <div class="skill-container container d-grid">
-        <div class="skill-img"></div>
+        <div class="skill-img">
+          <img src="images/skill-img.svg" alt="skill-img" class="skill-img" />
+        </div>
         <div class="skill-items">
           <div class="skill-item">
             <div class="skill-progress-bar">
@@ -133,7 +135,7 @@
             <div class="skill-progress-bar">
               <b class="skill-headding">Javascript</b>
               <div class="progress">
-                <div class="progress-inner" data-progress="80%"></div>
+                <div class="progress-inner" data-progress="60%"></div>
               </div>
             </div>
           </div>
