--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
       <div class="skill-container container d-grid">
         <div class="skill-img">
-          <img src="images/skill-img.svg" alt="skill-img" class="skill-img" />
+          <img src="images/skill-img.svg" alt="skill-img" class="skill-images" />
         </div>
         <div class="skill-items">
           <div class="skill-item">
