--- a/index.html
+++ b/index.html
@@ -105,13 +105,18 @@
       </div>
     </section>
     <!-- Service-section-end -->
+    <!-- Skill-section-start-->
     <section class="skill">
       <div class="container text-center">
         <h1 class="heading">Skill</h1>
       </div>
       <div class="skill-container container d-grid">
         <div class="skill-img">
-          <img src="images/skill-img.svg" alt="skill-img" class="skill-images" />
+          <img
+            src="images/skill-img.svg"
+            alt="skill-img"
+            class="skill-images"
+          />
         </div>
         <div class="skill-items">
           <div class="skill-item">
@@ -142,6 +147,29 @@
         </div>
       </div>
     </section>
+    <!-- Skill-section-end-->
+    <!-- About-section-start-->
+    <section class="about">
+      <div class="about-container container d-grid">
+        <div class="about-img">
+          <img src="me.jpg" alt="me" class="my-img" />
+        </div>
+        <div class="about-contant">
+          <h1 class="about-heading">About Me</h1>
+          <h3 class="subheading">Biten Das</h3> 
+          <p class="paragraph py-2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            consequuntur, nostrum dignissimos dolorem tempore molestias minus
+            illum quam et dicta.
+          </p>
+          <a href="#!" class="btn-primary mx-1">Hire Me</a>
+          <a href="images/cv.pdf" class="btn-secondary" target="_pdf"
+            >Download CV <i class="fas fa-file-pdf"></i
+          ></a>
+        </div>
+      </div>
+    </section>
+    <!-- About-section-end-->
     <script src="js/script.js"></script>
   </body>
 </html>
