--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
         </div>
         <div class="about-contant">
           <h1 class="about-heading">About Me</h1>
-          <h3 class="subheading">Biten Das</h3> 
+          <h3 class="Name">Biten Das</h3>
+          <h5 class="job-title">Web Designer</h5>
           <p class="paragraph py-2">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
             consequuntur, nostrum dignissimos dolorem tempore molestias minus
@@ -169,7 +170,36 @@
         </div>
       </div>
     </section>
-    <!-- About-section-end-->
+    <!-- About-section-end -->
+    <!-- Project-section-start -->
+    <section class="project">
+      <div class="container text-center">
+        <h1 class="heading">Project</h1>
+      </div>
+      <div class="container text-center">
+        <li class="project-link" data-web="ecommerce">E-commerce</li>
+        <li class="project-link" data-web="portfolio">Portfolio</li>
+        <li class="project-link" data-web="agency">Agency</li>
+        <li class="project-link" data-web="delivery">Food Delivery</li>
+      </div>
+      <div class="Project-items container">
+        <div class="project-item" data-web="e-commerce">
+          <div class="projct-font-part">
+            <img src="" alt="" class="project-image" />
+          </div>
+          <h3 class="project-title">AryCom</h3>
+          <div class="projct-back-part">
+            <i class="fas fa-eye"></i>
+          </div>
+        </div>
+        <div class="project-item" data-web="portfolio"></div>
+        <div class="project-item" data-web="agency"></div>
+        <div class="project-item" data-web="portfolio"></div>
+        <div class="project-item" data-web="e-commerce"></div>
+        <div class="project-item" data-web="delivery"></div>
+      </div>
+    </section>
+    <!-- Project-section-end -->
     <script src="js/script.js"></script>
   </body>
 </html>
