--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <div class="container text-center">
         <h1 class="heading">Project</h1>
       </div>
-      <div class="container text-center">
+      <div class="container text-center project-menu">
         <li class="project-link" data-web="ecommerce">E-commerce</li>
         <li class="project-link" data-web="portfolio">Portfolio</li>
         <li class="project-link" data-web="agency">Agency</li>
@@ -185,7 +185,7 @@
       <div class="Project-items container">
         <div class="project-item" data-web="e-commerce">
           <div class="projct-font-part">
-            <img src="" alt="" class="project-image" />
+            <img src="images/google-sheets.webp" alt="" class="project-image" />
           </div>
           <h3 class="project-title">AryCom</h3>
           <div class="projct-back-part">
