project image is add

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <div class="Project-items container">
         <div class="project-item" data-web="e-commerce">
           <div class="projct-font-part">
-            <img src="images/google-sheets.webp" alt="" class="project-image" />
+            <img src="images/google-sheets.webp" alt="project-image" class="project-image" />
           </div>
           <h3 class="project-title">AryCom</h3>
           <div class="projct-back-part">
