update is done for comment

--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
       </div>
     </section>
     <!-- Project-section-end -->
+    <!-- Contact-us-section-start -->
+    <!-- Contact-us-section-end -->
+    <!-- Gallery-section-start -->
+    <!-- Gallery-section-end -->
     <script src="js/script.js"></script>
   </body>
 </html>
