--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
     </section>
     <!-- Project-section-end -->
     <!-- Contact-us-section-start -->
+    <section class="contact">
+      
+    </section>
     <!-- Contact-us-section-end -->
     <!-- Gallery-section-start -->
     <!-- Gallery-section-end -->
