--- a/index.html
+++ b/index.html
@@ -185,24 +185,69 @@
       <div class="Project-items container">
         <div class="project-item" data-web="e-commerce">
           <div class="projct-font-part">
-            <img src="images/google-sheets.webp" alt="project-image" class="project-image" />
+            <img
+              src="images/project-01-thumbnail.png"
+              alt="project-image"
+              class="project-image"
+            />
           </div>
           <h3 class="project-title">AryCom</h3>
           <div class="projct-back-part">
-            <i class="fas fa-eye"></i>
+            <a href="#!" target="_project">
+              <i class="fas fa-eye"></i>
+            </a>
           </div>
         </div>
-        <div class="project-item" data-web="portfolio"></div>
-        <div class="project-item" data-web="agency"></div>
-        <div class="project-item" data-web="portfolio"></div>
-        <div class="project-item" data-web="e-commerce"></div>
-        <div class="project-item" data-web="delivery"></div>
+        <div class="project-item" data-web="e-commerce">
+          <div class="projct-font-part">
+            <img
+              src="images/project-03-thumbnail.png"
+              alt="project-image"
+              class="project-image"
+            />
+          </div>
+          <h3 class="project-title">AryCom</h3>
+          <div class="projct-back-part">
+            <a href="#!" target="_project">
+              <i class="fas fa-eye"></i>
+            </a>
+          </div>
+        </div>
+        <div class="project-item" data-web="e-commerce">
+          <div class="projct-font-part">
+            <img
+              src="images/project-05-thumbnail.jpg"
+              alt="project-image"
+              class="project-image"
+            />
+          </div>
+          <h3 class="project-title">AryCom</h3>
+          <div class="projct-back-part">
+            <a href="#!" target="_project">
+              <i class="fas fa-eye"></i>
+            </a>
+          </div>
+        </div>
+        <div class="project-item" data-web="e-commerce">
+          <div class="projct-font-part">
+            <img
+              src="images/project-08-thumbnail.jpg"
+              alt="project-image"
+              class="project-image"
+            />
+          </div>
+          <h3 class="project-title">AryCom</h3>
+          <div class="projct-back-part">
+            <a href="#!" target="_project">
+              <i class="fas fa-eye"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
     <!-- Project-section-end -->
     <!-- Contact-us-section-start -->
-    <section class="contact">
-    </section>
+    <section class="contact"></section>
     <!-- Contact-us-section-end -->
     <!-- Gallery-section-start -->
     <!-- Gallery-section-end -->
