--- a/index.html
+++ b/index.html
@@ -184,60 +184,68 @@
       </div>
       <div class="Project-items container">
         <div class="project-item" data-web="e-commerce">
-          <div class="projct-font-part">
-            <img
-              src="images/project-01-thumbnail.png"
-              alt="project-image"
-              class="project-image"
-            />
+          <div class="project-font-part">
+            <div class="project-image-container">
+              <img
+                src="images/project-01-thumbnail.png"
+                alt="project-image"
+                class="project-image"
+              />
+            </div>
           </div>
           <h3 class="project-title">AryCom</h3>
-          <div class="projct-back-part">
+          <div class="project-back-part">
             <a href="#!" target="_project">
               <i class="fas fa-eye"></i>
             </a>
           </div>
         </div>
         <div class="project-item" data-web="e-commerce">
-          <div class="projct-font-part">
-            <img
-              src="images/project-03-thumbnail.png"
-              alt="project-image"
-              class="project-image"
-            />
+          <div class="project-font-part">
+            <div class="project-image-container">
+              <img
+                src="images/project-03-thumbnail.png"
+                alt="project-image"
+                class="project-image"
+              />
+            </div>
           </div>
           <h3 class="project-title">AryCom</h3>
-          <div class="projct-back-part">
+          <div class="project-back-part">
             <a href="#!" target="_project">
               <i class="fas fa-eye"></i>
             </a>
           </div>
         </div>
         <div class="project-item" data-web="e-commerce">
-          <div class="projct-font-part">
-            <img
-              src="images/project-05-thumbnail.jpg"
-              alt="project-image"
-              class="project-image"
-            />
+          <div class="project-font-part">
+            <div class="project-image-container">
+              <img
+                src="images/project-05-thumbnail.jpg"
+                alt="project-image"
+                class="project-image"
+              />
+            </div>
           </div>
           <h3 class="project-title">AryCom</h3>
-          <div class="projct-back-part">
+          <div class="project-back-part">
             <a href="#!" target="_project">
               <i class="fas fa-eye"></i>
             </a>
           </div>
         </div>
         <div class="project-item" data-web="e-commerce">
-          <div class="projct-font-part">
-            <img
-              src="images/project-08-thumbnail.jpg"
-              alt="project-image"
-              class="project-image"
-            />
+          <div class="project-font-part">
+            <div class="project-image-container">
+              <img
+                src="images/project-08-thumbnail.jpg"
+                alt="project-image"
+                class="project-image"
+              />
+            </div>
           </div>
           <h3 class="project-title">AryCom</h3>
-          <div class="projct-back-part">
+          <div class="project-back-part">
             <a href="#!" target="_project">
               <i class="fas fa-eye"></i>
             </a>
