--- a/index.html
+++ b/index.html
@@ -259,7 +259,9 @@
     </section>
     <!-- Contact-us-section-end -->
     <!-- Gallery-section-start -->
+    <section class="gallery"></section>
     <!-- Gallery-section-end -->
+    <section class="footer"></section>
     <script src="js/script.js"></script>
   </body>
 </html>
