--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
     </section>
     <!-- Project-section-end -->
     <!-- Contact-us-section-start -->
-    <section class="contact">
-    </section>
+    <section class="contact"></section>
     <!-- Contact-us-section-end -->
     <!-- Gallery-section-start -->
     <section class="gallery"></section>
