--- a/index.html
+++ b/index.html
@@ -255,7 +255,9 @@
     </section>
     <!-- Project-section-end -->
     <!-- Contact-us-section-start -->
-    <section class="contact"></section>
+    <section class="contact">
+      <div class="container"></div>
+    </section>
     <!-- Contact-us-section-end -->
     <!-- Gallery-section-start -->
     <section class="gallery"></section>
